swagger docs finished and some hot fixes
